# macro-announcement-effect

./: .env.template  .gitignore  FIX_SUMMARY.md  PLOTTING_IMPROVEMENTS.md  README.md  fix_data_alignment.py  main.py  pyproject.toml  requirements.txt  research_paper_IMRD.md  run_analysis.bat  run_analysis.ps1  run_analysis.py  test_event_study.py
.github/workflows/: test.yml
config/: config.yaml
config/events/: macroeconomic_events.csv
data/processed/: crypto_data_clean.csv  data_metadata.json  price_data_for_events.csv  stock_data_clean.csv
data/raw/: comprehensive_data.csv  fixed_income_data.csv  stock_data.csv  volatility_data.csv
docs/: code_reference.md  configuration.md  index.md  methodology.md  output_artifacts.md  pipeline.md
notebooks/: README.md  TOP_10_RESULTS.md  VISUALIZATION_IMPROVEMENTS.md  free_data_analysis.ipynb  plotting_and_analysis.ipynb
notebooks/final_results/: ANALYSIS_SUMMARY.md  RESEARCH_CONCLUSIONS.md
results/: analysis_summary.md  brief_report.md  comprehensive_analysis_results.csv  comprehensive_analysis_results.pkl  comprehensive_research_report.md  event_study_detailed_report.md  event_study_results.pkl  event_study_summary.csv  hypothesis_test_results.csv
scripts/: run_analysis.py
src/analysis/: __init__.py  advanced_econometrics.py  comprehensive_statistical_analysis.py  event_study.py  improved_statistics.py  regression_analysis.py
src/data_collection/: __init__.py  base_collector.py  crypto_collector.py  economic_data_collector.py  enhanced_data_collector.py  fred_collector.py  improved_data_collector.py  yahoo_finance_collector.py
src/preprocessing/: __init__.py  data_preprocessor.py  feature_engineering.py  surprise_constructor.py
src/utils/: __init__.py  config.py  helpers.py  logging_config.py  warnings_suppression.py
src/visualization/: __init__.py  plot_generator.py  (+2 more)
tests/: test_alignment.py  test_event_study.py  test_features.py
(+92 files in other folders)
